--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=enotes
+server.port= 9090
+
+
+# Database Configuration
+spring.datasource.url=jdbc:mysql://localhost:3306/enotes
+spring.datasource.username=root
+spring.datasource.password=geeksforgeeks
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Hibernate Configuration
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=
