--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
+// application.properties
 spring.application.name=enotes
-server.port= 9090
-
+server.port=9090
 
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/enotes
@@ -11,4 +11,4 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate Configuration
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
